force-app/main/default/objects/SyncEvent__c/SyncEvent__c.object-meta.xml
<CustomObject>
    <description>Staging table for capturing sync events from CDC triggers on both orgs</description>
    <label>Sync Event</label>
    <nameField>
        <displayFormat>SyncEvent-{0000}</displayFormat>
        <label>Sync Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>