force-app/main/default/objects/SyncEvent__c/fields/ChangedFields__c.field-meta.xml
<CustomField>
    <fullName>ChangedFields__c</fullName>
    <description>Comma-separated list of changed field names</description>
    <label>Changed Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>