force-app/main/default/objects/SyncEvent__c/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <description>Type of change captured by CDC</description>
    <label>Change Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
                <label>Create</label>
            </value>
            <value>
                <fullName>UPDATE</fullName>
                <label>Update</label>
            </value>
            <value>
                <fullName>DELETE</fullName>
                <label>Delete</label>
            </value>
            <value>
                <fullName>UNDELETE</fullName>
                <label>Undelete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>