force-app/main/default/objects/SyncEvent__c/fields/CommitNumber__c.field-meta.xml
<CustomField>
    <fullName>CommitNumber__c</fullName>
    <description>CDC ChangeEventHeader sequence number</description>
    <label>Commit Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>