force-app/main/default/objects/SyncEvent__c/fields/CommitTimestamp__c.field-meta.xml
<CustomField>
    <fullName>CommitTimestamp__c</fullName>
    <description>CDC commit timestamp for event ordering</description>
    <label>Commit Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>