force-app/main/default/objects/SyncEvent__c/fields/PayloadJSON__c.field-meta.xml
<CustomField>
    <fullName>PayloadJSON__c</fullName>
    <description>JSON object containing field name to new value mapping</description>
    <label>Payload JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>